# work-diary-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: lint.yml  test.yml
python/: README.md  pyproject.toml
python/tests/: test_diary.py
python/work_diary_mcp/: config.py  diary.py  jira.py  markdown.py  roles.py  server.py  statuses.py
