[project]
name = "work-diary-mcp"
version = "1.0.0"
description = "MCP server for managing a weekly work diary"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
work-diary-mcp = "work_diary_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["work_diary_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
