[project]
name = "work-diary-mcp"
version = "0.3.0"
description = "MCP server for managing a weekly work diary"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
work-diary-mcp = "work_diary_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["work_diary_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP017", # use datetime.UTC alias — conflicts with `from datetime import timezone` pattern
]

[tool.ruff.lint.isort]
known-first-party = ["work_diary_mcp"]
